# register-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
example/: Cargo.toml
example/src/: deref.rs  main.rs
examples/: deref.rs  main.rs
src/: cpu.rs  lib.rs
