[package]
name = "register"
version = "0.5.0"
authors = [
        "Andre Richter <andre.o.richter@gmail.com>",
        "Tock Project Developers <tock-dev@googlegroups.com>"
]
description = "Common interface for MMIO and CPU registers"
homepage = "https://github.com/rust-embedded/register-rs"
repository = "https://github.com/rust-embedded/register-rs"
readme = "README.md"
keywords = ["embedded", "registers", "mmio", "cpu", "bare-metal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
        ".gitignore",
        ".rustfmt.toml",
        ".vscode",
        "examples",
        "Makefile",
]

[features]
default = []
no_std_unit_tests = ["tock-registers/no_std_unit_tests"]

[dependencies.tock-registers]
version = "0.5.x"
